--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,11 +18,11 @@ body {
 
 section {
   display: block;
-  margin: 0 0 20px 0;
+  margin: 20px 0 20px 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 20px;
+  margin: 50px 0 10px;
 }
 
 li {
